Refactoring the compound mark - A compound mark is an array of points containing a lat and longitude
Signed-off-by: Stefan Hall <sha162@uclive.ac.nz>

#[10]

--- a/.gitignore
+++ b/.gitignore
@@ -29,7 +29,7 @@ buildNumber.properties
 Thumbs.db
 ehthumbs.db
 
-# Folder config file
+# Folder course file
 Desktop.ini
 
 # Recycle Bin used on file shares
