created a conversionMethod for converting between a singular compound
-refactored main controller so that the canvas size is set before the race class is created
-changed a compound mark constructor to be public instead of private
-added an empty constructor for XYpoints
-boats now render at the start line

#story[9]

--- a/.gitignore
+++ b/.gitignore
@@ -90,6 +90,7 @@ nbactions.xml
 .idea/vcs.xml
 .idea/jsLibraryMappings.xml
 app.iml
+.idea/*
 
 # Sensitive or high-churn files:
 .idea/dataSources.ids
