--- a/node-app/package.json
+++ b/node-app/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.15.2",
+    "net": "^1.0.2",
     "path": "^0.12.7",
     "socket.io": "^1.7.3"
   }
