--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,9 +1,11 @@
 junit:
   stage: test
   script:
+    - cd visualiser/
     - mvn -B clean test
 
 generate_artifacts:
   stage: deploy
   script:
+    - cd visualiser/
     - mvn -B clean site package
