Updated git ignore so that the mock and visualiser iml files don't get added to git
#story[29]

--- a/.gitignore
+++ b/.gitignore
@@ -90,6 +90,8 @@ nbactions.xml
 .idea/vcs.xml
 .idea/jsLibraryMappings.xml
 app.iml
+mock/mock.iml
+visualiser/visualiser.iml
 .idea/*
 
 # Sensitive or high-churn files:
