Changing Boat Position & Headings from read in data. Positions on the Group is wayyyyy out of whack though. Need to talk to Sam.
#story[30] #pair[msi52, osr13]

--- a/visualiser/src/main/resources/config.properties
+++ b/visualiser/src/main/resources/config.properties
@@ -1,3 +1,4 @@
 courseFileLocation=/src/main/resources/course/course.xml
 testACDataHostname=https://livedata.americascup.com
+#testACDataHostname=http://csse-302staff.canterbury
 testACDataPort=4941
