Fixed Breaking Tests in teh Visualiser that occurred because of the Mock merge onto develop.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,3 +9,16 @@ generate_artifacts:
   script:
     - cd mock/
     - mvn -B clean site package
+
+
+junit:
+  stage: test
+  script:
+    - cd visualiser/
+    - mvn -B clean test
+
+generate_artifacts:
+  stage: deploy
+  script:
+    - cd visualiser/
+    - mvn -B clean site package
