Push to try and get mock artifacts on the VM. Hacky.
- Current YAML file is not creating artifacts.

#story[949]

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,14 +11,14 @@ generate_artifacts:
     - mvn -B clean site package
 
 
-junit:
-  stage: test
-  script:
-    - cd visualiser/
-    - mvn -B clean test
-
-generate_artifacts:
-  stage: deploy
-  script:
-    - cd visualiser/
-    - mvn -B clean site package
+#junit:
+#  stage: test
+#  script:
+#    - cd visualiser/
+#    - mvn -B clean test
+#
+#generate_artifacts:
+#  stage: deploy
+#  script:
+#    - cd visualiser/
+#    - mvn -B clean site package
