fixed the boundary problem
- Created a new boundaryGroup to house the boundary so it can be cleared and redrawn
- fixed credentials to view one of the test-Streams

gitLab issue reference: seng302-2017/team-4#1

#story[872]

--- a/visualiser/src/main/resources/config.properties
+++ b/visualiser/src/main/resources/config.properties
@@ -1,9 +1,10 @@
 courseFileLocation=/src/main/resources/course/course.xml
 testACDataHostname=https://livedata.americascup.com
-#testACDataHostname=http://csse-302staff.canterbury
 testACDataPort=4941
 
-#
+#testACDataHostname=http://csse-s302staff.canterbury.ac.nz
+#testACDataPort=4942
+
 #courseFileLocation=/src/main/resources/course/course.xml
 #testACDataHostname=http://127.0.0.1
 #testACDataPort=4941
