--- a/visualiser/src/main/resources/config.properties
+++ b/visualiser/src/main/resources/config.properties
@@ -8,3 +8,5 @@ testACDataPort=4942
 #courseFileLocation=/src/main/resources/course/course.xml
 #testACDataHostname=http://127.0.0.1
 #testACDataPort=4941
+#testACDataHostname=http://localhost
+#testACDataPort=5005
