--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,26 +1,26 @@
 
 
 junit:
-  stage: test mock
+  stage: test
   script:
     - cd mock/
     - mvn -B clean test
 
 generate_artifacts:
-  stage: deploy mock
+  stage: deploy
   script:
     - cd mock/
     - mvn -B clean site package
 
 
 junit:
-  stage: test vis
+  stage: test
   script:
     - cd visualiser/
     - mvn -B clean test
 
 generate_artifacts:
-  stage: deploy vis
+  stage: deploy
   script:
     - cd visualiser/
     - mvn -B clean site package
