--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,22 +5,26 @@ junit:
   script:
     - cd mock/
     - mvn -B clean test
+    - cd ../visualiser/
+    - mvn -B clean test
 
 generate_artifacts:
   stage: deploy
   script:
     - cd mock/
     - mvn -B clean site package
-
-
-junit:
-  stage: test
-  script:
-    - cd visualiser/
-    - mvn -B clean test
-
-generate_artifacts:
-  stage: deploy
-  script:
-    - cd visualiser/
+    - cd ../visualiser/
     - mvn -B clean site package
+
+
+#junit:
+#  stage: test
+#  script:
+#    - cd visualiser/
+#    - mvn -B clean test
+#
+#generate_artifacts:
+#  stage: deploy
+#  script:
+#    - cd visualiser/
+#    - mvn -B clean site package
