Created the boatAction message class along with enum of the protocol and utilities for keybinding -enum for different types of boat actions created - extended binaryMessage to create boatActionMessages -Added functionality to bind key presses with boatActionMessages -Added a dependency on mock to access binary message class
#pair[tjg73, jtr44]
#story[1035]

--- a/visualiser/pom.xml
+++ b/visualiser/pom.xml
@@ -22,6 +22,11 @@
             <version>4.12</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>seng302</groupId>
+            <artifactId>mock</artifactId>
+            <version>0.0</version>
+        </dependency>
         <!--<dependency>-->
         <!--<groupId>junit</groupId>-->
         <!--<artifactId>junit</artifactId>-->
