--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
     <version>0.0</version>
     <modules>
         <module>mock</module>
+        <module>visualiser</module>
     </modules>
     <name>app</name>
     <url>https://eng-git.canterbury.ac.nz/SENG302-2017/team-4</url>
