--- a/visualiser/pom.xml
+++ b/visualiser/pom.xml
@@ -7,7 +7,7 @@
     <packaging>jar</packaging>
     <version>0.0</version>
 
-    <name>app</name>
+    <name>FM_visualiser</name>
     <url>https://eng-git.canterbury.ac.nz/SENG302-2016/team-4/visualiser</url>
 
     <properties>
@@ -22,27 +22,6 @@
             <version>4.12</version>
             <scope>test</scope>
         </dependency>
-        <!--<dependency>-->
-        <!--<groupId>junit</groupId>-->
-        <!--<artifactId>junit</artifactId>-->
-        <!--<version>4.12</version>-->
-        <!--</dependency>-->
-        <!--<dependency>-->
-        <!--<groupId>junit</groupId>-->
-        <!--<artifactId>junit</artifactId>-->
-        <!--<version>4.12</version>-->
-        <!--</dependency>-->
-        <!--<dependency>-->
-        <!--<groupId>junit</groupId>-->
-        <!--<artifactId>junit</artifactId>-->
-        <!--<version>4.12</version>-->
-        <!--</dependency>-->
-        <!--<dependency>-->
-        <!--<groupId>junit</groupId>-->
-        <!--<artifactId>junit</artifactId>-->
-        <!--<version>3.8.1</version>-->
-        <!--<scope>test</scope>-->
-        <!--</dependency>-->
     </dependencies>
 
     <build>
