Need to update things on this branch so that a push generates artifacts that are hosted on the server:
- Need to change the root pom.xml. Second test.
- Need to change the YAML file. Second test.

#story[5.abc]

--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>seng302</groupId>
     <artifactId>FullMast</artifactId>
-    <packaging>pom</packaging>
+    <packaging>jar</packaging>
     <version>0.0</version>
     <modules>
         <module>mock</module>
