Need to update things on this branch so that a push generates artifacts that are hosted on the server:
- Need to change the root pom.xml. First test.
- Need to change the YAML file. Third test.

#story[5.abc]

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,6 +9,11 @@ generate_artifacts:
   stage: deploy
   script:
     - mvn -B clean site package
+  artifacts:
+    name: "test"
+    paths:
+      - ./mock/target/mock*.jar
+      - ./visualiser/target/visualiser*.jar
 
 
 
