Need to update things on this branch so that a push generates artifacts that are hosted on the server:
- Need to change the root pom.xml. Final.
- Need to change the YAML file. Final.

#story[5.abc]

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,7 +10,7 @@ generate_artifacts:
   script:
     - mvn -B clean site package
   artifacts:
-    name: "test"
+    name: "FullMast_sprint5"
     paths:
       - ./mock/target/mock*.jar
       - ./visualiser/target/visualiser*.jar
