--- a/visualiser/src/main/resources/config.properties
+++ b/visualiser/src/main/resources/config.properties
@@ -2,11 +2,11 @@ courseFileLocation=/src/main/resources/course/course.xml
 #testACDataHostname=https://livedata.americascup.com
 #testACDataPort=4941
 
-testACDataHostname=http://csse-s302staff.canterbury.ac.nz
-testACDataPort=4942
+#testACDataHostname=http://csse-s302staff.canterbury.ac.nz
+#testACDataPort=4942
 
 #courseFileLocation=/src/main/resources/course/course.xml
-#testACDataHostname=http://127.0.0.1
-#testACDataPort=4941
+testACDataHostname=http://127.0.0.1
+testACDataPort=4941
 #testACDataHostname=http://localhost
 #testACDataPort=5005
