Added Mock dependency to visualiser pom Added cucumber features
Signed-off-by: Stefan Hall <sha162@uclive.ac.nz>
#pair[sha162, jtr44]

--- a/visualiser/pom.xml
+++ b/visualiser/pom.xml
@@ -23,6 +23,11 @@
             <scope>test</scope>
         </dependency>
         <dependency>
+            <groupId>seng302</groupId>
+            <artifactId>mock</artifactId>
+            <version>0.0</version>
+        </dependency>
+        <dependency>
             <groupId>info.cukes</groupId>
             <artifactId>cucumber-java</artifactId>
             <version>1.2.5 </version>
