Created new module (common) at the base level, so that we can share resources.
- First attempt.

#story[1035]

--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,7 @@
     <modules>
         <module>mock</module>
         <module>visualiser</module>
+        <module>common</module>
     </modules>
     <name>FullMast</name>
     <url>https://eng-git.canterbury.ac.nz/SENG302-2017/team-4</url>
