--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,8 +7,8 @@ generate_artifacts:
   stage: deploy
   script:
     - mvn -B clean site package
-  artifacts:
-    name: "FullMast_sprint5"
-    paths:
-      - ./mock/target/mock*.jar
-      - ./visualiser/target/visualiser*.jar
+#  artifacts:
+#    name: "FullMast_sprint5"
+#    paths:
+#      - ./mock/target/mock*.jar
+#      - ./visualiser/target/visualiser*.jar
