Refactor the Server side. Partially fixed. Sat and drew a lot of diagrams, came up with an architecture that we are happy with.
Signed-off-by: Ollie Robb <osr13@uclive.ac.nz>

#pair[osr13, sha162] #story[1127]

--- a/visualiser/src/main/resources/config.properties
+++ b/visualiser/src/main/resources/config.properties
@@ -4,8 +4,8 @@ courseFileLocation=/src/main/resources/course/course.xml
 
 #testACDataHostname=http://csse-s302staff.canterbury.ac.nz
 #testACDataPort=4942
-#
+
 testACDataHostname=http://127.0.0.1
 testACDataPort=4941
-#testACDataHostname=http://localhost
-#testACDataPort=5005
+#testACDataHostname=http://10.32.26.81
+#testACDataPort=4941
