Added practice button. Practice button goes straight to race view. Created new message when connecting to mock for practice.
#story[1137] #pair[msi52, asv15]

--- a/mock/pom.xml
+++ b/mock/pom.xml
@@ -45,6 +45,11 @@
             <artifactId>dom4j</artifactId>
             <version>1.6.1</version>
         </dependency>
+        <dependency>
+            <groupId>seng302</groupId>
+            <artifactId>visualiser</artifactId>
+            <version>0.0</version>
+        </dependency>
     </dependencies>
 
     <build>
