--- a/visualiser/src/main/resources/config.properties
+++ b/visualiser/src/main/resources/config.properties
@@ -5,8 +5,8 @@ courseFileLocation=/src/main/resources/course/course.xml
 #testACDataHostname=http://csse-s302staff.canterbury.ac.nz
 #testACDataPort=4942
 #
-testACDataHostname=http://127.0.0.1
-testACDataPort=4941
+#testACDataHostname=http://127.0.0.1
+#testACDataPort=4941
 #testACDataHostname=http://132.181.15.99
 #testACDataPort=4941
 #testACDataHostname=http://localhost
