--- a/visualiser/pom.xml
+++ b/visualiser/pom.xml
@@ -39,6 +39,11 @@
             <version>1.2.5</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.jfoenix</groupId>
+            <artifactId>jfoenix</artifactId>
+            <version>1.4.0</version>
+        </dependency>
     </dependencies>
 
     <build>
