Refactored the BoatInterface into an abstract class Generic Boat - abstract class now extends RecursiveTreeObject for tables  - added JFoenix to common's pom
#story[1351]

--- a/common/pom.xml
+++ b/common/pom.xml
@@ -12,4 +12,12 @@
 
     <artifactId>common</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.jfoenix</groupId>
+            <artifactId>jfoenix</artifactId>
+            <version>1.4.0</version>
+        </dependency>
+    </dependencies>
+
 </project>
