Changed yml to allow me to download jars from eng-git because my maven doesn't work right
Signed-off-by: Matt <msi52@uclive.ac.nz>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,3 +7,7 @@ generate_artifacts:
   stage: deploy
   script:
     - mvn -B clean site package
+  artifacts:
+    paths:
+      - server/target/*.jar
+      - client/target/*.jar
